# audiobook-cli

./: .gitignore  README.md  pyproject.toml
audiobook_cli/: __init__.py  audible.py  utils.py
tests/: test_utils.py  utils.py
