[tool.poetry]
name = "audiobook-cli"
version = "0.1.0"
description = "Audiobook CLI"
authors = ["l3mon4id"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
audible = "^0.9.1"
typer = "^0.12.3"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
abc = "audiobook_cli:app"
